Add Mastodon widget (#3)
![Screenshot 2025-05-19 at 13 13
10](https://github.com/user-attachments/assets/ac2adf28-1bc0-46ac-a2d1-8f439912bc7e)

--- a/config/llms.yml
+++ b/config/llms.yml
@@ -21,6 +21,18 @@
           widgets:
             - type: hacker-news
             - type: lobsters
+            - type: mastodon
+              instance-url: https://mastodon.social
+              accounts:
+                - huggingface
+                - openai
+                - anthropic
+              hashtags:
+                - ai
+                - llm
+                - machinelearning
+              limit: 15
+              collapse-after: 5
 
         - type: group
           widgets:
