feat: fix engine to find suggestion-engine first, then use search-engine.

--- a/home.yml
+++ b/home.yml
@@ -25,6 +25,7 @@
         - type: search
           search-engine: google
           suggestions: true
+          suggestion-engine: startpage
           bangs:
             - title: YouTube
               shortcut: "!yt"
